# obs-ws-client-python

./: .gitignore  README.md  pyproject.toml
example/: record.py  version.py
obswsc/: client.py  data.py  enums.py  registry.py
